--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -43,7 +43,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 * Finnish: {{t-|fi|tapella}}, {{t+|fi|taistella}}
 * French: [[se battre]], [[combattre]]
 * German: [[kämpfen]], [[fechten]], [[streiten]] (archaic)
-* Hebrew: {{he-translation|לריב|larív}}, {{he-translation|להיאבק|lehe`avék}}, {{he-translation|להילחם|lehilakhém}}
+* Hebrew: {{he-translation|רב|rav}}, {{he-translation|נאבק|ne`evák}}, {{he-translation|נלחם|nilkhám}}
 {{trans-mid}}
 * Icelandic: [[slást]], [[berjast]]
 * Italian: {{t|it|azzuffarsi}}, {{t-|it|battersi}}
@@ -62,7 +62,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 {{trans-top|to strive for}}
 * Czech: {{t|cs|bojovat}}
 * Dutch: {{t-|nl|opkomen}} {{t+|nl|voor}}, {{t|nl|ijveren}} voor
-* Hebrew: {{he-translation|להיאבק|lehe`avék}}
+* Hebrew: {{he-translation|נאבק|ne`evák}}
 {{trans-mid}}
 * Icelandic: [[berjast]]
 * Spanish: {{t-|es|luchar}}
@@ -72,7 +72,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 {{trans-top|to conduct or engage in}}
 * Czech: {{t|cs|bojovat}}
 * Dutch: {{t|nl|uitvechten}}
-* Hebrew: {{he-translation|להילחם|lehilakhém}}
+* Hebrew: {{he-translation|נלחם|nilkhám}}
 {{trans-mid}}
 * Icelandic: {{t|is|heyja}}
 * [[Scottish Gaelic]]: [[cog]], [[sabaid]]
@@ -83,7 +83,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 * Danish: [[udkæmpe]]
 * Dutch: {{t+|nl|vechten}} {{t+|nl|tegen}}, vechten {{t+|nl|met}}
 * Greek: {{t|el|πολεμώ|sc=Grek}} (polemó)
-* Hebrew: {{he-translation|להיאבק|lehe`avék}}, {{he-translation|להילחם|lehilakhém}}
+* Hebrew: {{he-translation|נאבק|ne`evák}}, {{he-translation|נלחם|nilkhám}}
 {{trans-mid}}
 * Icelandic: [[berjast]] [[við]]
 * Italian: {{t+|it|combattere}}
@@ -100,7 +100,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 * French: {{t+|fr|combattre}}
 * German: [[bekämpfen]]
 * Greek: {{t|el|καταπολεμώ|sc=Grek}} (katapolemó)
-* Hebrew: {{he-translation|להיאבק|lehe`avék}}, {{he-translation|להילחם|lehilakhém}}
+* Hebrew: {{he-translation|נאבק|ne`evák}}, {{he-translation|נלחם|nilkhám}}
 {{trans-mid}}
 * Icelandic: [[berjast]] [[gegn]]
 * Italian: [[lottare]] contro
