--- a/en/停/停.11116.wikitext
+++ b/en/停/停.11116.wikitext
@@ -26,9 +26,11 @@
 {{mid4}}
 *[[停車]]
 {{mid4}}
+*[[バス停]] ([[バスてい]], [[basutei]]) [[bus stop]]
 {{mid4}}
 {{bottom}}
 ----
+
 ==Korean==
 ===Hanja===
 {{ko-hanja|hangeul=정|rv=jeong|mr=chŏng}}
