--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -107,6 +107,7 @@ From {{AGr.}} [[στόμαχος]] (stómachos)
 [[zh-min-nan:stomach]]
 [[de:stomach]]
 [[el:stomach]]
+[[fa:stomach]]
 [[fr:stomach]]
 [[ko:stomach]]
 [[hy:stomach]]
