--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -3,7 +3,8 @@
 
 {{rank|old|came|men|107|come|without|make|def}}
 
-
+===Etymology===
+{{OE.}} [[cuman]]. Cognate include [[Latin]] {{term|commeo|commeō|come and go, go up and down}}.
 
 ===Pronunciation===
 *{{enPR|/kŭm/}}, {{IPA|/kʌm/}}, {{SAMPA|/kVm/}}
