--- a/en/慉/慉.15708.wikitext
+++ b/en/慉/慉.15708.wikitext
@@ -1,23 +1,33 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=9006<sub>3</sub>|canj=心卜女田 (PYVW)}}
+
 # to [[bring up]]
 # to [[raise]]
+
 ====References====
-{{Han ref|kx=0397.260|dkj=11049|dj=0737.020|hdz=42339.020|uh=6149|ud=24905|bh=DD66|bd=56678}}
+* {{Han ref|kx=0397.260|dkj=11049|dj=0737.020|hdz=42339.020|uh=6149|ud=24905|bh=DD66|bd=56678}}
 
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
 {{ja-readings|on=[[きん]] (kin), [[きょう]] (kyō)|kun=[[おこす]] (okosu)}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xù]] ([[xu4]])|wg=hsü<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慉]]
