--- a/en/惮/惮.15619.wikitext
+++ b/en/惮/惮.15619.wikitext
@@ -1,20 +1,30 @@
 {{see|憚}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=11|four=|canj=心金田十 (PCWJ)}}
+
 # dread, shrink from, shirk, fear
+
 ====References====
-{{Han ref|kx=0392.181|hdz=42318.140|uh=60EE|ud=24814}}
+* {{Han ref|kx=0392.181|hdz=42318.140|uh=60EE|ud=24814}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=daan6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|tra=憚|pin=[[dàn]] ([[dan4]])|wg=tan<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惮]]
