--- a/en/愃/愃.15639.wikitext
+++ b/en/愃/愃.15639.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9301<sub>6</sub>|canj=心十一一 (PJMM)}}
+
 # [[relax]]
+
 ====References====
-{{Han ref|kx=0393.260|dkj=10891|dj=0730.030|hdz=42331.060|uh=6103|ud=24835|bh=D94A|bd=55626}}
+* {{Han ref|kx=0393.260|dkj=10891|dj=0730.030|hdz=42331.060|uh=6103|ud=24835|bh=D94A|bd=55626}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
 {{ja-readings|on=[[けん]] (ken), [[せん]] (sen), [[かん]] (kan)|kun=[[ゆたか]] (yutaka), [[こころよい]] (kokoroyoi), [[わすれる]] (wasureru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=선|eumhun=|rv=seon|mr=sŏn|y=sen}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xuān]] ([[xuan1]]), [[xuǎn]] ([[xuan3]])|wg=hsüan<sup>1</sup>, hsüan<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愃]]
