--- a/en/惾/惾.15634.wikitext
+++ b/en/惾/惾.15634.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9204<sub>7</sub>|canj=心山金水 (PUCE)}}
+
 # {{defn|Han|sort=心09}}
+
 ====References====
-{{Han ref|kx=0393.150|dkj=10879|dj=0729.120|hdz=42330.060|uh=60FE|ud=24830|bh=D948|bd=55624}}
+* {{Han ref|kx=0393.150|dkj=10879|dj=0729.120|hdz=42330.060|uh=60FE|ud=24830|bh=D948|bd=55624}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[zōng]] ([[zong1]])|wg=tsung<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惾]]
