--- a/en/昹/昹.16994.wikitext
+++ b/en/昹/昹.16994.wikitext
@@ -1,22 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6303<sub>2</sub>|canj=日戈弓水 (AINE)}}
+
 # {{defn|Han|sort=日05}}
+
 ====References====
-{{Han ref|kx=0494.170|dkj=13869|dj=0859.020|hdz=21503.120|uh=6639|ud=26169|bh=CEF7|bd=52983}}
+* {{Han ref|kx=0494.170|dkj=13869|dj=0859.020|hdz=21503.120|uh=6639|ud=26169|bh=CEF7|bd=52983}}
 
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
 {{ja-readings|on=[[あい]] (ai)|kun=}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[ǎi]] ([[ai3]])|wg=ai<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昹]]
