--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -1,5 +1,9 @@
 {{wikipedia}}
 ==English==
+YOUR A FAG MAN SERIOUSLY UR SO GAY
+== 
+== English ==
+'''''France''UR A ''' ==
 
 {{rank|mine|wild|front|576|France|London|save|length}}
 
