--- a/en/傄/傄.11156.wikitext
+++ b/en/傄/傄.11156.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=人大金山 (OKCU)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0112.140|dkj=00934|dj=0239.310|hdz=10202.060|uh=5084|ud=20612}}
+* {{Han ref|kx=0112.140|dkj=00934|dj=0239.310|hdz=10202.060|uh=5084|ud=20612}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人10}}
+
 # {{defn|Japanese}}
+
 ====Readings====
 {{ja-readings|on=[[かつ]] (katsu), [[けち]] (kechi)|kun=[[すこやかなさま]] (sukoyakanasama)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xiā]] ([[xia1]])|wg=hsia<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:傄]]
