--- a/en/偷/偷.11143.wikitext
+++ b/en/偷/偷.11143.wikitext
@@ -1,36 +1,55 @@
 {{see|偸}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2822<sub>1</sub>|canj=人人一弓 (OOMN)}}
+
 # to steal, burglar, thief
+
 ====References====
-{{Han ref|kx=0112.030|dj=0239.020|hdz=10193.020|uh=5077|ud=20599}}
+* {{Han ref|kx=0112.030|dj=0239.020|hdz=10193.020|uh=5077|ud=20599}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=tau1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
 {{ja-readings|on=[[ちゅう]] (chū), [[とう]] (tō)|kun=[[ぬすむ]] (nusumu)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=투|rv=tu|mr=t'u}}
+
 # {{defn|Korean}}
 
 * '''Big5''':
 ** Hex: B0BD
 ** Decimal: 45245
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[tōu]] ([[tou1]])|wg=t'ou<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偷]]
