--- a/en/坱/坱.13044.wikitext
+++ b/en/坱/坱.13044.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4513<sub>0</sub>|canj=土中月大 (GLBK)}}
+
 # [[dust]]
+
 ====References====
-{{Han ref|kx=0226.310|dkj=04986|dj=0462.080|hdz=10431.100|uh=5771|ud=22385|bh=CBF6|bd=52214}}
+* {{Han ref|kx=0226.310|dkj=04986|dj=0462.080|hdz=10431.100|uh=5771|ud=22385|bh=CBF6|bd=52214}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=yeung2}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
 {{ja-readings|on=[[あう]] (au)|kun=[[ちり]] (chiri)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=앙|rv=ang|mr=ang}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yǎng]] ([[yang3]])|wg=yang<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坱]]
