--- a/en/圹/圹.12987.wikitext
+++ b/en/圹/圹.12987.wikitext
@@ -1,24 +1,34 @@
 {{see|壙}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=03|sn=6|four=|canj=土戈 (GI), X土戈 (XGI)}}
+
 # [[tomb]], [[grave]]: prairie
 # open wilderness
+
 ====References====
-{{Han ref|kx=0224.181|hdz=10420.070|uh=5739|ud=22329}}
+* {{Han ref|kx=0224.181|hdz=10420.070|uh=5739|ud=22329}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=kwong3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|tra=壙|pin=[[kuàng]] ([[kuang4]])|wg=k'uang<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 ====Compounds====
-*[[圹穴]]
+* [[圹穴]]
 
 [[fr:圹]]
