--- a/en/惢/惢.15607.wikitext
+++ b/en/惢/惢.15607.wikitext
@@ -1,11 +1,11 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=08|sn=12|four=3333<sub>0</sub>|canj=心心心 (PPP)}}
+{{Han char|rn=61|rad=心|as=08|sn=12|four=3333<sub>0</sub>|canj=心心心 (PPP)|⿱[[心]]⿰心心}}
 
 # {{defn|Han|sort=心08}}
-# [[(to) be puzzled]]
-# [[(to) be good]]
+# to be [[puzzled]]
+# to be [[good]]
 
 ====References====
 {{Han ref|kx=0391.270|dkj=10826|dj=0727.030|hdz=42312.080|uh=60E2|ud=24802|bh=D8FB|bd=55547}}
