--- a/en/惢/惢.15607.wikitext
+++ b/en/惢/惢.15607.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=08|sn=12|four=3333<sub>0</sub>|canj=心心心 (PPP)|⿱[[心]]⿰心心}}
+{{Han char|rn=61|rad=心|as=08|sn=12|four=3333<sub>0</sub>|canj=心心心 (PPP)|ids=⿱[[心]]⿰心心}}
 
 # {{defn|Han|sort=心08}}
 # to be [[puzzled]]
