--- a/en/倬/倬.11050.wikitext
+++ b/en/倬/倬.11050.wikitext
@@ -1,31 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=2124<sub>6</sub>|canj=人卜日十 (OYAJ)}}
+
 # [[noticeable]], [[large]]
 # [[clear]], [[distinct]]
+
 ====References====
-{{Han ref|kx=0109.040|dkj=00794|dj=0232.020|hdz=10175.030|uh=502C|ud=20524|bh=D0D3|bd=53459}}
+* {{Han ref|kx=0109.040|dkj=00794|dj=0232.020|hdz=10175.030|uh=502C|ud=20524|bh=D0D3|bd=53459}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=cheuk3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人08}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[たく]] (taku), [[ちょく]] (choku)|kun=[[おおきい]] (ookii), [[あきらか]] (akiraka), [[たかい]] (takai)}}
+* {{ja-readings|on=[[たく]] (taku), [[ちょく]] (choku)|kun=[[おおきい]] (ookii), [[あきらか]] (akiraka), [[たかい]] (takai)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=탁|rv=tak|mr=t'ak}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[zhuō]] ([[zhuo1]])|wg=cho<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:倬]]
