--- a/en/昒/昒.16954.wikitext
+++ b/en/昒/昒.16954.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6702<sub>0</sub>|canj=日心竹竹 (APHH), X日心竹竹 (XAPHH)}}
+
 # {{defn|Han|sort=日04}}
+
 ====References====
-{{Han ref|kx=0492.010|dkj=13812|dj=0854.060|hdz=21493.010|uh=6612|ud=26130|bh=CCC7|bd=52423}}
+* {{Han ref|kx=0492.010|dkj=13812|dj=0854.060|hdz=21493.010|uh=6612|ud=26130|bh=CCC7|bd=52423}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[こつ]] (kotsu), [[こち]] (kochi), [[ぶつ]] (butsu), [[もち]] (mochi)|kun=[[よあけ]] (yoake)}}
+* {{ja-readings|on=[[こつ]] (kotsu), [[こち]] (kochi), [[ぶつ]] (butsu), [[もち]] (mochi)|kun=[[よあけ]] (yoake)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[hū]] ([[hu1]])|wg=hu<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昒]]
