--- a/en/偦/偦.11126.wikitext
+++ b/en/偦/偦.11126.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人弓人月 (ONOB), X人弓人月 (XONOB)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0111.150|dkj=00879|dj=0237.130|hdz=10198.050|uh=5066|ud=20582}}
+* {{Han ref|kx=0111.150|dkj=00879|dj=0237.130|hdz=10198.050|uh=5066|ud=20582}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[しょ]] (sho)|kun=[[とおる]] (tooru)}}
+* {{ja-readings|on=[[しょ]] (sho)|kun=[[とおる]] (tooru)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xū]] ([[xu1]])|wg=hsü<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偦]]
