--- a/en/惶/惶.15627.wikitext
+++ b/en/惶/惶.15627.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9601<sub>4</sub>|canj=心竹日土 (PHAG)}}
+
 # [[fearful]], [[afraid]], [[anxious]], [[nervous]]
+
 ====References====
-{{Han ref|kx=0392.320|dkj=10863|dj=0728.150|hdz=42329.090|uh=60F6|ud=24822|bh=B471|bd=46193}}
+* {{Han ref|kx=0392.320|dkj=10863|dj=0728.150|hdz=42329.090|uh=60F6|ud=24822|bh=B471|bd=46193}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=wong4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[こう]] (kō)|kun=[[おそれる]] (osoreru)}}
+* {{ja-readings|on=[[こう]] (kō)|kun=[[おそれる]] (osoreru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=황|eumhun=|rv=hwang|mr=hwang|y=hwang}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[huáng]] ([[huang2]])|wg=huang<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惶]]
