--- a/en/垇/垇.13066.wikitext
+++ b/en/垇/垇.13066.wikitext
@@ -1,13 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土尸尸山 (GSSU)}}
+
 # {{defn|Han|sort=土05}}
+
 ====References====
-{{Han ref|kx=0227.271|hdz=10432.020|uh=5787|ud=22407}}
+* {{Han ref|kx=0227.271|hdz=10432.020|uh=5787|ud=22407}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[ào]] ([[ao4]])|wg=ao<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垇]]
