--- a/en/坄/坄.12999.wikitext
+++ b/en/坄/坄.12999.wikitext
@@ -1,13 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土竹弓水 (GHNE)}}
+
 # {{defn|Han|sort=土04}}
+
 ====References====
-{{Han ref|kx=0224.280|dkj=04913|dj=0459.170|hdz=10426.050|uh=5744|ud=22340}}
+* {{Han ref|kx=0224.280|dkj=04913|dj=0459.170|hdz=10426.050|uh=5744|ud=22340}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[tóu]] ([[tou2]]), [[yùn]] ([[yun4]])|wg=t'ou<sup>2</sup>, yün<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坄]]
