--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -1,49 +1,63 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6022<sub>7</sub>|canj=日心竹竹 (APHH)|ids=⿱[[日]][[勿]]}}
+
 # [[change]]
 # [[easy]]
+
 ====References====
-{{Han ref|kx=0492.030|dkj=13814|dj=0854.080|hdz=21494.010|uh=6613|ud=26131|bh=A9F6|bd=43510}}
+* {{Han ref|kx=0492.030|dkj=13814|dj=0854.080|hdz=21494.010|uh=6613|ud=26131|bh=A9F6|bd=43510}}
 
 ----
 
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=yi6, yik6}}
+
 # {{defn|Cantonese}}
 
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=5|rs=日04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[えき]] (eki), [[い]] (i)|kun=[[やさしい]] (yasashii), [[かえる]] (kaeru), [[おさめる]] (osameru)}}
- 
+* {{ja-readings|on=[[えき]] (eki), [[い]] (i)|kun=[[やさしい]] (yasashii), [[かえる]] (kaeru), [[おさめる]] (osameru)}}
 
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[역]], [[이]]|eumhun=|rv=yeok, i|mr=yŏk, i|y=yek, i}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yì]] ([[yi4]])|wg=i<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 ====Compounds====
-*[[易货贸易]]
-*[[易拉罐]]
+* [[易货贸易]]
+* [[易拉罐]]
 * [[易經]] / [[易经]] (yì jīng): [[I Ching]]
-*[[易燃物]]
-*[[易熔合金]]
-*[[易如反掌]]
-*[[易手]]
-*[[易于]]
-*[[易帜]]
+* [[易燃物]]
+* [[易熔合金]]
+* [[易如反掌]]
+* [[易手]]
+* [[易于]]
+* [[易帜]]
 
 [[fr:易]]
 [[ko:易]]
