--- a/en/昄/昄.16940.wikitext
+++ b/en/昄/昄.16940.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6104<sub>7</sub>|canj=日竹水 (AHE)}}
+
 # [[big]]
+
 ====References====
-{{Han ref|kx=0490.360|dkj=13789|dj=0852.060|hdz=21491.030|uh=6604|ud=26116|bh=CCC6|bd=52422}}
+* {{Han ref|kx=0490.360|dkj=13789|dj=0852.060|hdz=21491.030|uh=6604|ud=26116|bh=CCC6|bd=52422}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[はん]] (han), [[ばん]] (ban), [[へん]] (hen)|kun=[[おおきい]] (ookii)}}
+* {{ja-readings|on=[[はん]] (han), [[ばん]] (ban), [[へん]] (hen)|kun=[[おおきい]] (ookii)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[bǎn]] ([[ban3]])|wg=pan<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昄]]
