--- a/en/坶/坶.13049.wikitext
+++ b/en/坶/坶.13049.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4715<sub>0</sub>|canj=土田卜戈 (GWYI)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0226.370|dkj=04993|dj=0462.150|hdz=10436.080|uh=5776|ud=22390|bh=CBF8|bd=52216}}
+* {{Han ref|kx=0226.370|dkj=04993|dj=0462.150|hdz=10436.080|uh=5776|ud=22390|bh=CBF8|bd=52216}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=muk6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ぼく]] (boku), [[もく]] (moku)|kun=}}
+* {{ja-readings|on=[[ぼく]] (boku), [[もく]] (moku)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[mù]] ([[mu4]])|wg=mu<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坶]]
