--- a/en/旬/旬.16916.wikitext
+++ b/en/旬/旬.16916.wikitext
@@ -1,31 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=02|sn=6|four=2762<sub>0</sub>|canj=心日 (PA)}}
+
 # ten-day period
 # period of time
+
 ====References====
-{{Han ref|kx=0489.160|dkj=13746|dj=0850.130|hdz=21485.030|uh=65EC|ud=26092|bh=A6AF|bd=42671}}
+* {{Han ref|kx=0489.160|dkj=13746|dj=0850.130|hdz=21485.030|uh=65EC|ud=26092|bh=A6AF|bd=42671}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=cheun4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=c|rs=日02}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[じゅん]] (jun), [[しゅん]] (shun)|kun=[[あまねく]] (amaneku)}}
+* {{ja-readings|on=[[じゅん]] (jun), [[しゅん]] (shun)|kun=[[あまねく]] (amaneku)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=순|eumhun=|rv=sun|mr=sun|y=swun}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xún]] ([[xun2]])|wg=hsün<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:旬]]
