--- a/en/愁/愁.15637.wikitext
+++ b/en/愁/愁.15637.wikitext
@@ -1,31 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=2933<sub>8</sub>|canj=竹火心 (HFP)}}
+
 # [[anxiety]]
 # to worry about, be anxious
+
 ====References====
-{{Han ref|kx=0393.210|dkj=10885|dj=0729.180|hdz=42322.080|uh=6101|ud=24833|bh=B754|bd=46932}}
+* {{Han ref|kx=0393.210|dkj=10885|dj=0729.180|hdz=42322.080|uh=6101|ud=24833|bh=B754|bd=46932}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=sau4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=c|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[しゅう]] (shū)|kun=[[うれい]] (urei), [[うれえる]] (ureeru)}}
+* {{ja-readings|on=[[しゅう]] (shū)|kun=[[うれい]] (urei), [[うれえる]] (ureeru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=수|eumhun=|rv=su|mr=su|y=swu}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[chóu]] ([[chou2]])|wg=ch'ou<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愁]]
