--- a/en/倨/倨.11040.wikitext
+++ b/en/倨/倨.11040.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=2726<sub>4</sub>|canj=人尸十口 (OSJR)}}
+
 # [[arrogant]], [[haughty]], [[rude]]
+
 ====References====
-{{Han ref|kx=0108.190|dkj=00790|dj=0231.090|hdz=10185.030|uh=5028|ud=20520|bh=ADD0|bd=44496}}
+* {{Han ref|kx=0108.190|dkj=00790|dj=0231.090|hdz=10185.030|uh=5028|ud=20520|bh=ADD0|bd=44496}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=geui3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人08}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[きょ]] (kyo), [[こ]] (ko)|kun=[[おごる]] (ogoru)}}
+* {{ja-readings|on=[[きょ]] (kyo), [[こ]] (ko)|kun=[[おごる]] (ogoru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=거|rv=geo|mr=kŏ}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jù]] ([[ju4]])|wg=chü<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:倨]]
