--- a/en/坪/坪.13037.wikitext
+++ b/en/坪/坪.13037.wikitext
@@ -1,32 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4114<sub>9</sub>|canj=土一火十 (GMFJ)|ids=⿰[[土]][[平]]}}
+
 # level ground
 # Japanese and Korean measure of area
+
 ====References====
-{{Han ref|kx=0226.220|dkj=04976|dj=0461.340|hdz=10430.090|uh=576A|ud=22378|bh=A957|bd=43351}}
+* {{Han ref|kx=0226.220|dkj=04976|dj=0461.340|hdz=10430.090|uh=576A|ud=22378|bh=A957|bd=43351}}
+
 ----
 
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ping4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=c|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[へい]] (hei), [[ひょう]] (hyō)|kun=[[つぼ]] (tsubo)}}
+* {{ja-readings|on=[[へい]] (hei), [[ひょう]] (hyō)|kun=[[つぼ]] (tsubo)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=평|rv=pyeong|mr=p'yŏng}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[píng]] ([[ping2]])|wg=p'ing<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坪]]
