--- a/en/坨/坨.13035.wikitext
+++ b/en/坨/坨.13035.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4311<sub>1</sub>|canj=土十心 (GJP)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0226.200|dkj=04974|dj=0461.320|hdz=10435.060|uh=5768|ud=22376|bh=CC40|bd=52288}}
+* {{Han ref|kx=0226.200|dkj=04974|dj=0461.320|hdz=10435.060|uh=5768|ud=22376|bh=CC40|bd=52288}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=to4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[い]] (i), [[た]] (ta), [[だ]] (da)|kun=[[けわしい]] (kewashii)}}
+* {{ja-readings|on=[[い]] (i), [[た]] (ta), [[だ]] (da)|kun=[[けわしい]] (kewashii)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=이|rv=i|mr=i}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[tuó]] ([[tuo2]])|wg=t'o<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坨]]
