--- a/en/愵/愵.15688.wikitext
+++ b/en/愵/愵.15688.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心弓一一 (PNMM)}}
+
 # {{defn|Han|sort=心10}}
+
 ====References====
-{{Han ref|kx=0396.340|dkj=11011|dj=0735.220|hdz=42339.130|uh=6135|ud=24885}}
+* {{Han ref|kx=0396.340|dkj=11011|dj=0735.220|hdz=42339.130|uh=6135|ud=24885}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[でき]] (deki), [[にゃく]] (nyaku)|kun=[[うれえるさま]] (ureerusama)}}
+* {{ja-readings|on=[[でき]] (deki), [[にゃく]] (nyaku)|kun=[[うれえるさま]] (ureerusama)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[nì]] ([[ni4]])|wg=ni<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愵]]
