--- a/en/垙/垙.13085.wikitext
+++ b/en/垙/垙.13085.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=4911<sub>1</sub>|canj=土火一山 (GFMU)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0228.050|dkj=05045|dj=0464.040|hdz=10439.020|uh=5799|ud=22425|bh=CE5B|bd=52827}}
+* {{Han ref|kx=0228.050|dkj=05045|dj=0464.040|hdz=10439.020|uh=5799|ud=22425|bh=CE5B|bd=52827}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土06}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[くう]] (kū)|kun=[[ちまた]] (chimata)}}
+* {{ja-readings|on=[[くう]] (kū)|kun=[[ちまた]] (chimata)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[guāng]] ([[guang1]])|wg=kuang<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垙]]
