--- a/en/愚/愚.15662.wikitext
+++ b/en/愚/愚.15662.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=6033<sub>2</sub>|canj=田月心 (WBP)}}
+
 # [[stupid]], [[doltish]], [[foolish]]
+
 ====References====
-{{Han ref|kx=0395.120|dkj=10946|hdz=42321.070|uh=611A|ud=24858|bh=B74D|bd=46925}}
+* {{Han ref|kx=0395.120|dkj=10946|hdz=42321.070|uh=611A|ud=24858|bh=B74D|bd=46925}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=yu4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=c|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ぐ]] (gu)|kun=[[おろか]] (oroka)}}
+* {{ja-readings|on=[[ぐ]] (gu)|kun=[[おろか]] (oroka)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=우|eumhun=|rv=u|mr=u|y=wu}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yú]] ([[yu2]])|wg=yü<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愚]]
