--- a/en/垑/垑.13077.wikitext
+++ b/en/垑/垑.13077.wikitext
@@ -1,13 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=土弓戈弓 (GNIN)}}
+
 # {{defn|Han|sort=土06}}
+
 ====References====
-{{Han ref|kx=0227.380|dkj=05038|dj=0463.250|hdz=10441.070|uh=5791|ud=22417}}
+* {{Han ref|kx=0227.380|dkj=05038|dj=0463.250|hdz=10441.070|uh=5791|ud=22417}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[chǐ]] ([[chi3]])|wg=ch'ih<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垑]]
