--- a/en/愕/愕.15657.wikitext
+++ b/en/愕/愕.15657.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9602<sub>7</sub>|canj=心口口尸 (PRRS)}}
+
 # [[startled]], [[alarmed]], [[astonished]]
+
 ====References====
-{{Han ref|kx=0395.050|dkj=10939|dj=0731.150|hdz=42328.080|uh=6115|ud=24853|bh=B46A|bd=46186}}
+* {{Han ref|kx=0395.050|dkj=10939|dj=0731.150|hdz=42328.080|uh=6115|ud=24853|bh=B46A|bd=46186}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ngok6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[がく]] (gaku)|kun=[[おどろく]] (odoroku)}}
+* {{ja-readings|on=[[がく]] (gaku)|kun=[[おどろく]] (odoroku)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=악|eumhun=|rv=ak|mr=ak|y=ak}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[è]] ([[e4]])|wg=o<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愕]]
