--- a/en/愗/愗.15659.wikitext
+++ b/en/愗/愗.15659.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=|canj=弓大心 (NKP)}}
+
 # {{defn|Han|sort=心09}}
+
 ====References====
-{{Han ref|kx=0395.080|dkj=10942|dj=0731.180|hdz=42325.090|uh=6117|ud=24855}}
+* {{Han ref|kx=0395.080|dkj=10942|dj=0731.180|hdz=42325.090|uh=6117|ud=24855}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ぼう]] (bō), [[も]] (mo)|kun=[[おろか]] (oroka), [[やぶさか]] (yabusaka)}}
+* {{ja-readings|on=[[ぼう]] (bō), [[も]] (mo)|kun=[[おろか]] (oroka), [[やぶさか]] (yabusaka)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[mòu]] ([[mou4]])|wg=mou<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愗]]
