--- a/en/垜/垜.13088.wikitext
+++ b/en/垜/垜.13088.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=土弓尸木 (GNSD)}}
+
 # [[heap]]
+
 ====References====
-{{Han ref|kx=0228.090|dkj=05049|dj=0464.070|hdz=10441.010|uh=579C|ud=22428}}
+* {{Han ref|kx=0228.090|dkj=05049|dj=0464.070|hdz=10441.010|uh=579C|ud=22428}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土06}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[だ]] (da)|kun=[[つみかされる]] (tsumikasareru)}}
+* {{ja-readings|on=[[だ]] (da)|kun=[[つみかされる]] (tsumikasareru)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[duǒ]] ([[duo3]])|wg=to<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垜]]
