--- a/en/偭/偭.11133.wikitext
+++ b/en/偭/偭.11133.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2126<sub>0</sub>|canj=人一田中 (OMWL)}}
+
 # transgress
+
 ====References====
-{{Han ref|kx=0111.260|dkj=00890|dj=0237.230|hdz=10188.060|uh=506D|ud=20589|bh=B0C1|bd=45249}}
+* {{Han ref|kx=0111.260|dkj=00890|dj=0237.230|hdz=10188.060|uh=506D|ud=20589|bh=B0C1|bd=45249}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=min5}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[べん]] (ben), [[めん]] (men)|kun=[[むかう]] (mukau), [[そむく]] (somuku), [[かなう]] (kanau)}}
+* {{ja-readings|on=[[べん]] (ben), [[めん]] (men)|kun=[[むかう]] (mukau), [[そむく]] (somuku), [[かなう]] (kanau)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=면|rv=myeon|mr=myŏn}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[miǎn]] ([[mian3]])|wg=mien<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偭]]
