--- a/en/坷/坷.13050.wikitext
+++ b/en/坷/坷.13050.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4112<sub>0</sub>|canj=土一弓口 (GMNR)}}
+
 # clod of earth, lump of soil
+
 ====References====
-{{Han ref|kx=0226.380|dkj=04994|dj=0462.160|hdz=10429.160|uh=5777|ud=22391|bh=A956|bd=43350}}
+* {{Han ref|kx=0226.380|dkj=04994|dj=0462.160|hdz=10429.160|uh=5777|ud=22391|bh=A956|bd=43350}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ho2}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[か]] (ka)|kun=}}
+* {{ja-readings|on=[[か]] (ka)|kun=}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=가|rv=ga|mr=ka}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[kě]] ([[ke3]])|wg=k'o<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坷]]
