--- a/en/慖/慖.15722.wikitext
+++ b/en/慖/慖.15722.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=11|sn=14|four=9600<sub>0</sub>|canj=心田戈一 (PWIM)}}
+
 # {{defn|Han|sort=心11}}
+
 ====References====
-{{Han ref|kx=0398.350|dkj=11090|dj=0737.280|hdz=42346.020|uh=6156|ud=24918|bh=E1D5|bd=57813}}
+* {{Han ref|kx=0398.350|dkj=11090|dj=0737.280|hdz=42346.020|uh=6156|ud=24918|bh=E1D5|bd=57813}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[guó]] ([[guo2]])|wg=kuo<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慖]]
