--- a/en/偋/偋.11099.wikitext
+++ b/en/偋/偋.11099.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2724<sub>1</sub>|canj=人尸廿廿 (OSTT)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0110.070|dkj=00839|dj=0235.020|hdz=10198.020|uh=504B|ud=20555|bh=D452|bd=54354}}
+* {{Han ref|kx=0110.070|dkj=00839|dj=0235.020|hdz=10198.020|uh=504B|ud=20555|bh=D452|bd=54354}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[へい]] (hei)|kun=}}
+* {{ja-readings|on=[[へい]] (hei)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[bǐng]] ([[bing3]]), [[dàng]] ([[dang4]])|wg=ping<sup>3</sup>, tang<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偋]]
