--- a/en/愬/愬.15679.wikitext
+++ b/en/愬/愬.15679.wikitext
@@ -1,38 +1,60 @@
 {{see|訴}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=14|four=8733<sub>2</sub>|canj=廿月心 (TBP)}}
+
 # [[accuse]]
 # [[sue]]
 # [[inform]]
 # [[narrate]]
+
 ====References====
-{{Han ref|kx=0396.140|dkj=10988|dj=0734.210|hdz=42334.150|uh=612C|ud=24876|bh=E1C2|bd=57794}}
+* {{Han ref|kx=0396.140|dkj=10988|dj=0734.210|hdz=42334.150|uh=612C|ud=24876|bh=E1C2|bd=57794}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=sou3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[そ]] (so), [[さく]] (saku)|kun=[[うったえる]] (uttaeru)}}
+* {{ja-readings|on=[[そ]] (so), [[さく]] (saku)|kun=[[うったえる]] (uttaeru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[소]], [[색]]|eumhun=|rv=so, saek|mr=so, saek|y=so, sayk}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[sù]] ([[su4]])|wg=su<sup>4</sup>}}
+
 # {{defn|Mandarin}}
+
 ----
+
 ==Vietnamese==
+
 ===Han character===
 '''愬''' ([[tố]])
 
