--- a/en/坑/坑.13012.wikitext
+++ b/en/坑/坑.13012.wikitext
@@ -1,48 +1,67 @@
 {{see|阬}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=4011<sub>7</sub>|canj=土卜竹弓 (GYHN)}}
+
 # [[pit]], [[hole]]
 # [[bury]], [[trap]]
 # [[harry]]
+
 ====References====
-{{Han ref|kx=0226.010|dkj=04932|dj=0460.080|hdz=10426.090|uh=5751|ud=22353|bh=A77C|bd=42876}}
+* {{Han ref|kx=0226.010|dkj=04932|dj=0460.080|hdz=10426.090|uh=5751|ud=22353|bh=A77C|bd=42876}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=haang1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=c|rs=土04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[こう]] (kō)|kun=[[あな]] (ana), [[あなにする]] (ananisuru)}}
+* {{ja-readings|on=[[こう]] (kō)|kun=[[あな]] (ana), [[あなにする]] (ananisuru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=갱|rv=gaeng|mr=kaeng}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[kēng]] ([[keng1]])|wg=k'eng<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 ====Compounds====
-*[[坑道]]
-*[[坑害]]
-*[[坑井]]
-*[[坑坑坎坎]], [[坑坑坎坎的]]
-*[[坑蒙]]
-*[[坑蒙拐骗]]
-*[[坑木]]
-*[[坑骗]]
-*[[坑人]]
-*[[坑洼]]
-*[[坑子]]
+* [[坑道]]
+* [[坑害]]
+* [[坑井]]
+* [[坑坑坎坎]], [[坑坑坎坎的]]
+* [[坑蒙]]
+* [[坑蒙拐骗]]
+* [[坑木]]
+* [[坑骗]]
+* [[坑人]]
+* [[坑洼]]
+* [[坑子]]
 
 [[fr:坑]]
 [[ko:坑]]
