--- a/en/傚/傚.11181.wikitext
+++ b/en/傚/傚.11181.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=2824<sub>0</sub>|canj=人卜大大 (OYKK)}}
+
 # imitate, mimic
+
 ====References====
-{{Han ref|kx=0113.240|dkj=00969|dj=0241.130|hdz=10205.020|uh=509A|ud=20634|bh=B3CB|bd=46027}}
+* {{Han ref|kx=0113.240|dkj=00969|dj=0241.130|hdz=10205.020|uh=509A|ud=20634|bh=B3CB|bd=46027}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=haau6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人10}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[こう]] (kō)|kun=[[ならう]] (narau)}}
+* {{ja-readings|on=[[こう]] (kō)|kun=[[ならう]] (narau)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=효|rv=hyo|mr=hyo}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xiào]] ([[xiao4]])|wg=hsiao<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:傚]]
