--- a/en/倱/倱.11061.wikitext
+++ b/en/倱/倱.11061.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=2621<sub>1</sub>|canj=人日心心 (OAPP)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0109.100|dkj=00800|dj=0232.080|hdz=10177.040|uh=5031|ud=20529|bh=D0DC|bd=53468}}
+* {{Han ref|kx=0109.100|dkj=00800|dj=0232.080|hdz=10177.040|uh=5031|ud=20529|bh=D0DC|bd=53468}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=wan6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人08}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[こん]] (kon), [[ごん]] (gon)|kun=}}
+* {{ja-readings|on=[[こん]] (kon), [[ごん]] (gon)|kun=}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=혼|rv=hon|mr=hon}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[hùn]] ([[hun4]]), [[jū]] ([[ju1]])|wg=hun<sup>4</sup>, chü<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:倱]]
